--- a/config/locales/simpe_form_ru.yml
+++ b/config/locales/simpe_form_ru.yml
@@ -30,7 +30,7 @@ ru:
         image: "Изображение"
         price: "Цена"
         sale_price: "Цена со скидкой"
-        type: "Класс ламината"
+        product_type: "Класс ламината"
         meters_per_pack: "м2 в упаковке"
         length: "Длина (мм)"
         width: "Ширина (мм)"
