--- a/config/locales/simpe_form_ru.yml
+++ b/config/locales/simpe_form_ru.yml
@@ -28,6 +28,8 @@ ru:
         name: "Название"
         article: "Артикул"
         image: "Изображение"
+        texture: "Текстура"
+        color: "Оттенок"
         price: "Цена"
         sale_price: "Цена со скидкой"
         product_type: "Класс ламината"
