--- a/config/locales/simpe_form_ru.yml
+++ b/config/locales/simpe_form_ru.yml
@@ -30,8 +30,8 @@ ru:
         image: "Изображение"
         texture: "Текстура"
         color: "Оттенок"
-        price: "Цена"
-        sale_price: "Цена со скидкой"
+        price: "Стоимость упаковки"
+        price_per_meter: "Стоимость за метр"
         product_type: "Класс ламината"
         meters_per_pack: "м2 в упаковке"
         length: "Длина (мм)"
