--- a/config/locales/simpe_form_ru.yml
+++ b/config/locales/simpe_form_ru.yml
@@ -37,12 +37,12 @@ ru:
         length: "Длина (мм)"
         width: "Ширина (мм)"
         height: "Высота (мм)"
-        volume: "Объем упаковки (м3)"
+        volume: "Использование теплых полов"
         weight: "Вес упаковки (кг)"
         lifetime: "Срок жизни (лет)"
         country: "Страна производства"
         facet: "Фаска"
-        stamping: "Тиснение"
+        stamping: "Отделка поверхности"
         about: "Короткое описание"
         number_per_pack: "Штук в упаковке"
         lock_type: "Тип замка"
