--- a/config/locales/simpe_form_ru.yml
+++ b/config/locales/simpe_form_ru.yml
@@ -37,7 +37,7 @@ ru:
         length: "Длина (мм)"
         width: "Ширина (мм)"
         height: "Высота (мм)"
-        volume: "Использование теплых полов"
+        heat_floor: "Использование теплых полов"
         weight: "Вес упаковки (кг)"
         lifetime: "Срок жизни (лет)"
         country: "Страна производства"
